# gmshflow

./: .gitignore  README.md  env.yml  pyproject.toml  test_context_manager.py  test_public_api.py  test_refactor.py  test_types_docstrings.py
.github/workflows/: test.yml
01_Python/: gmshflow.py
examples/: 01_basic_mesh_generation.ipynb  02_advanced_mesh_with_points.ipynb  03_geometry_preprocessing.ipynb
examples/north_bga/: north_bga.py  north_bga_gmsh.msh  north_bga_simple.py  trash.dbf  trash.shp  trash.shx
examples/north_bga/data/: barrier.dbf  barrier.qix  barrier.shp  barrier.shx  gdf_voro.dbf  gdf_voro.shp  gdf_voro.shx
src/: env.yml  gmshflow.py  gmshflow_original.py
src/gmshflow/: __init__.py
src/gmshflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gmshflow/core/: __init__.py  domain.py  model.py
src/gmshflow/geometry/: __init__.py  line.py  point.py  polygon.py
src/gmshflow/utils/: __init__.py  preprocessing.py
tests/: conftest.py
tests/fixtures/: mock_gmsh.py  sample_geometries.py
tests/integration/: test_gmsh_integration.py  test_line_mesh_integration.py  test_mesh_generation.py  test_model_context_manager.py  test_polygon_surface_grid.py
tests/unit/: test_context_manager.py  test_coverage_additional.py  test_coverage_focused.py  test_domain_comprehensive.py  test_edge_cases.py  test_line_geometry.py  test_polygon_geometry.py  test_preprocessing.py  test_public_api.py
